[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/Frame.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/UI/Plants vs. Zombies (Main Theme).mp3" type="AudioStream" id=3]

[node name="PauseMenu" type="MarginContainer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -40.0
margin_right = 50.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 95, 80 )
rect_pivot_offset = Vector2( 50, 40 )
script = ExtResource( 1 )

[node name="FrameVBox" type="VBoxContainer" parent="."]
margin_right = 100.0
margin_bottom = 80.0
custom_constants/separation = -2

[node name="Top" parent="FrameVBox" instance=ExtResource( 2 )]
margin_right = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="FrameVBox/Top"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Game Paused"
align = 1
valign = 1

[node name="Main" parent="FrameVBox" instance=ExtResource( 2 )]
margin_top = 14.0
margin_right = 100.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="VBoxContainer" type="VBoxContainer" parent="FrameVBox/Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -20.0
margin_right = 18.0
margin_bottom = 20.0

[node name="ButtonResume" type="Button" parent="FrameVBox/Main/VBoxContainer"]
margin_right = 36.0
margin_bottom = 18.0
text = "Resume"

[node name="ButtonQuit" type="Button" parent="FrameVBox/Main/VBoxContainer"]
margin_top = 22.0
margin_right = 36.0
margin_bottom = 40.0
text = "Quit"

[node name="BlurTween" type="Tween" parent="."]
pause_mode = 2

[node name="FadeTween" type="Tween" parent="."]
pause_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="FrameVBox/Main/VBoxContainer/ButtonResume" to="." method="_on_ButtonResume_pressed"]
[connection signal="pressed" from="FrameVBox/Main/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
